--- a/jdpa.coreframwork.web/test-output/old/TestSuite/methods.html
+++ b/jdpa.coreframwork.web/test-output/old/TestSuite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="667a73">  <td>15/01/20 11:01:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Controller.init()[pri:0, instance:com.jdpa.services.Controller@4c1ce791]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1143052075</td>   <td></td> </tr>
-<tr bgcolor="667a73">  <td>15/01/20 11:02:08</td>   <td>16090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Controller.firstTest()[pri:0, instance:com.jdpa.services.Controller@4c1ce791]">firstTest</td> 
-  <td>TestNG@1143052075</td>   <td></td> </tr>
+<tr bgcolor="649f9f">  <td>15/01/21 15:49:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Controller.init()[pri:0, instance:com.jdpa.services.Controller@17620d83]">init</td> 
+  <td>TestNG@257101811</td>   <td></td> </tr>
+<tr bgcolor="649f9f">  <td>15/01/21 15:49:25</td>   <td>10926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Controller.firstTest()[pri:0, instance:com.jdpa.services.Controller@17620d83]">firstTest</td> 
+  <td>TestNG@257101811</td>   <td></td> </tr>
 </table>
